# m8flow

./: .dockerignore  .gitignore  .trivyignore  sample.env  start_dev.sh
m8flow-core/: README.md  pyproject.toml
m8flow-core/migrations/: alembic.ini  env.py  migrate.py
m8flow-core/migrations/versions/: 1518b05122bc_create_m8flow_tables.py  22aaaa61d8f6_add_template_table.py  2cfce680c743_update_the_tenant_table_columns.py  9f2d0e4c8abc_unified_tenant_template_timestamps_to_seconds.py  a750bbb5c234_add_postgres_rls.py  b1c2d3e4f5a6_template_files_json.py  b8837274af96_add_m8flow_nats_tokens_table.py  c3d4e5f6a7b8_add_process_model_template.py  ce8f052197c2_add_tenant_scoping.py  d2b8f0d1a4c5_seed_m8flow_tenant.py  f6a7b8c9d0e1_add_tenant_scoping_to_additional_tables.py
m8flow-core/src/m8flow_core/: __init__.py  exceptions.py  tenancy.py
m8flow-core/src/m8flow_core/adapters/: __init__.py  base.py  spiff_arena.py  standalone.py
m8flow-core/src/m8flow_core/auth/: base.py  models.py  registry.py
m8flow-core/src/m8flow_core/auth/adapters/: auth0.py  keycloak.py  (+1 more)
m8flow-core/src/m8flow_core/config/: env_mapper.py
m8flow-core/src/m8flow_core/db/: registry.py
m8flow-core/src/m8flow_core/middleware/: asgi.py
m8flow-core/src/m8flow_core/models/: audit_mixin.py  base_enum.py  nats_token.py  process_model_template.py  template.py  tenant.py  tenant_scoped.py
m8flow-core/src/m8flow_core/patches/: boot_phase.py  registry.py
m8flow-core/src/m8flow_core/services/: template_authorization_service.py  template_service.py  template_storage_service.py  tenant_service.py
(+136 files in other folders)
